Clear cache test